# vattenfall-mlops

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  run_pipeline.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy.yml  features.yml  ingest.yml  promote.yml  train.yml
app/: main.py  schemas.py
docs/: architecture_choices.md  project_plan.md
infra/: main.tf  outputs.tf  security.tf  storage.tf  terraform.tfvars.example  variables.tf
ingestion/: analyze_intervals.py  client.py  dlt_source.py  pipeline.py  processor.py  storage.py  verify_data.py
models/: __init__.py  train.py
notebooks/: eda.ipynb  training_results.ipynb
pipeline/: __init__.py  features.py  ingest.py  promote.py  train.py
scripts/: analyze_intervals.py  push_image.sh  setup_azure.sh  verify_data.py
tests/: __init__.py  test_processor.py  test_train.py
