[project]
name = "vattenfall"
version = "0.1.0"
description = "Real-time imbalance price prediction for Finland"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core serving dependencies (minimal for production)
    "fastapi",
    "uvicorn",
    "requests",
    "pandas",
    "scikit-learn",
    "python-dotenv",
    "pyarrow",  # For parquet read/write
    "python-dateutil>=2.9.0.post0",
    "plotly>=6.5.2",  # For dashboard visualization
    "wandb",  # For model registry (needed at runtime for hot-reload)
]

[dependency-groups]
# Training/pipeline dependencies (for data ingestion and model training)
training = [
    "dlt[filesystem]>=1.0.0",  # Data load tool for incremental ingestion
    "adlfs>=2024.2.0",  # Azure Data Lake filesystem for pandas
]

# Notebook/exploration dependencies (not needed in production)
notebooks = [
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
    "scipy>=1.13.1",
    "fastparquet",  # Alternative parquet engine for notebooks
]

# Development tools
dev = [
    "pytest",
    "ruff",
    "black",
]

# All dependencies for local development
all = [
    {include-group = "training"},
    {include-group = "notebooks"},
    {include-group = "dev"},
]
